--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -41,3 +41,10 @@ padding-bottom: 19px;
     width: 200px;
     padding-bottom: 10px;
 }
+.breadcrumb-nav-list-item {
+    a{
+        color: #5c5962;
+        text-decoration: none;
+        cursor:text;
+    }
+}
